--- a/index.html
+++ b/index.html
@@ -292,6 +292,10 @@
         font-size: 66%;
       }
 
+      /* @media screen {
+        .page{ margin: 2em;}
+      } */
+
       @media print {
         @page {
           height: 100%;
@@ -714,10 +718,10 @@
 				<li><label><input type="checkbox" id="reactionMovement">10. Reaction Movement</label></li>
 				<li><label><input type="checkbox" id="fastBC">11. Fast Battlecruisers</label></li>
 				<li><label><input type="checkbox" id="groundCombat">14. Transports and Ground Combat</label></li>
-				<li><label><input type="checkbox" id="flagships" disabled>16. Flagships</label></li>
+				<li><label><input type="checkbox" id="flagships">16. Flagships</label></li>
 				<li><label><input type="checkbox" id="researchCenters">17. Research and Industrial Centers</label></li>
 				<li><label><input type="checkbox" id="terraformingNebulae">18. Terraforming Nebulae</label></li>
-				<li><label><input type="checkbox" id="uniqueShips" disabled>19. Unique Ships</label></li>
+				<li><label><input type="checkbox" id="uniqueShips">19. Unique Ships</label></li>
 				<li><label><input type="checkbox" id="slowScientists">20. Slow Scientists</label></li>
 				<li><label><input type="checkbox" id="smartScientists">20. Smart Scientists</label></li>
           <!--li><label><input type="checkbox" disabled>20. Bloody Combat</label></li-->
@@ -727,7 +731,7 @@
       </div>
     </div>
 
-    <div id="productionSheetAndTech" class="flexbox">
+    <div id="productionSheetAndTech" class="flexbox page">
       <div class="flex">
         <h1>Space Empires Production Sheet</h1>
         <div class="flex-child">
@@ -1163,7 +1167,7 @@
     </div>
 
 
-    <div id="shipTechnologySheet">
+    <div id="shipTechnologySheet" class="page">
 		<h1>Ship Technology Sheet (Circle the Current Technology Level when the Group is built)</h1>
       <div id="technologySheetContainer">
         <table id="technologySheet1" class="technologySheet">
@@ -1185,7 +1189,7 @@
               <td>1 2 3</td>
               <td>1 2 3</td>
               <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
-              <td>E: 1 2 F: 1</td>
+              <td>E: 1 <span class="enable_reactionMovement">2</span> <span class="enable_fastBC">F: 1</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
           </tbody>
@@ -1207,7 +1211,7 @@
               <td>1 2</td>
               <td>1 2 3</td>
               <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
-              <td>Exp: 1 2</td>
+              <td>Exp: 1 <span class="enable_reactionMovement">2</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
           </tbody>
@@ -1229,7 +1233,7 @@
               <td>1 2 3</td>
               <td>1 2 3</td>
               <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
-              <td></td>
+              <td><span class="enable_advancedConstruction">TB: 1</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
           </tbody>
@@ -1240,18 +1244,18 @@
               <td>1 2 3</td>
               <td>1 2 3</td>
               <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
-              <td></td>
+              <td><span class="enable_advancedConstruction">SP: 1</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
           </tbody>
           <tbody class="enable_titans">
             <tr>
               <td>TN #5</td>
-              <td>1 2 3</td>
+              <td>1 2 3 <span class="enable_advancedConstruction">4</span></td>
               <td>1 2 3</td>
               <td>1 2 3</td>
               <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
-              <td>FTR: 1-3</td>
+              <td><span class="enable_carriers">FTR: 1-4</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
           </tbody>
@@ -1275,11 +1279,11 @@
           <tbody class="enable_cloaking">
             <tr>
               <td>R #6</td>
-              <td>1 2</td>
-              <td>1 2</td>
+              <td>1 2 <span class="enable_advancedConstruction">3</span></td>
+              <td>1 2 <span class="enable_advancedConstruction">3</span></td>
               <td>1 2 3</td>
               <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
-              <td>Cloak: 2</td>
+              <td>C:2 <span class="enable_advancedConstruction">F:2 G:3</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
           </tbody>
@@ -1301,7 +1305,7 @@
               <td>1</td>
               <td>1 2 3</td>
               <td></td>
-              <td>FTR: 2 3</td>
+              <td>FTR: 2 3 <span class="enable_advancedConstruction">4</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
           </tbody>
@@ -1356,11 +1360,11 @@
               <td>1</td>
               <td>1 2 3</td>
               <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
-              <td>Grnd: 3</td>
+              <td>Grnd: 3 <span class="enable_replicators">AR</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
           </tbody>
-          <tbody>
+          <tbody class="enable_reactionMovement">
             <tr>
               <td colspan="7">When an "R" appears for Move Tech, read it as the appropriate number. The R is just a reminder that the group gains the React ability at that Move Technology. </td>
             </tr>
