Added R for reaction movement to ship sheet

--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
               <td>1 2 3</td>
               <td>1 2 3</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 <span class="disable_reactionMovement">4</span><span class="enable_reactionMovement">R</span> 5 6 <span class="enable_movement">7</span></td>
               <td>E: 1 <span class="enable_reactionMovement">2</span> <span class="enable_fastBC">F: 1</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1199,7 +1199,7 @@
               <td>1 <span class="enable_advancedConstruction">X:2</span></td>
               <td>1 <span class="enable_advancedConstruction">X:2</span></td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
               <td>Scan: 1 2 <span class="enable_advancedConstruction">F:2</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1210,7 +1210,7 @@
               <td>1 2</td>
               <td>1 2</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
               <td>Exp: 1 <span class="enable_reactionMovement">2</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1221,7 +1221,7 @@
               <td>1 2</td>
               <td>1 2</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 <span class="disable_reactionMovement">4</span><span class="enable_reactionMovement">R</span> 5 6 <span class="enable_movement">7</span></td>
               <td><span class="enable_fastBC">Fast: 1</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1232,7 +1232,7 @@
               <td>1 2 3</td>
               <td>1 2 3</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
               <td><span class="enable_advancedConstruction">TB: 1</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1243,7 +1243,7 @@
               <td>1 2 3</td>
               <td>1 2 3</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 4 5 <span class="disable_reactionMovement">6</span><span class="enable_reactionMovement">R</span> <span class="enable_movement">7</span></td>
               <td><span class="enable_advancedConstruction">SP: 1</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1271,7 +1271,7 @@
               <td>1 2 3</td>
               <td>1 2 3</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
               <td></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1282,7 +1282,7 @@
               <td>1 2 <span class="enable_advancedConstruction">3</span></td>
               <td>1 2 <span class="enable_advancedConstruction">3</span></td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
               <td>C:2 <span class="enable_advancedConstruction">F:2 G:3</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1293,7 +1293,7 @@
               <td>1</td>
               <td>1</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
               <td>PD: 1 2 3</td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1315,7 +1315,7 @@
               <td>1</td>
               <td>1</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
               <td></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1326,7 +1326,7 @@
               <td>1 2 3</td>
               <td>1 2 3</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
               <td>Fast: 2</td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1337,7 +1337,7 @@
               <td>1</td>
               <td>1</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 4 5 <span class="disable_reactionMovement">6</span><span class="enable_reactionMovement">R</span> <span class="enable_movement">7</span></td>
               <td>SW: 2 <span class="enable_mineSweeper3">3</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1348,7 +1348,7 @@
               <td></td>
               <td>1 2</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 <span class="disable_reactionMovement">4</span><span class="enable_reactionMovement">R</span> 5 6 <span class="enable_movement">7</span></td>
               <td>BD: 2</td>
               <td class="enable_experience">S V E L</td>
             </tr>
@@ -1359,7 +1359,7 @@
               <td>1</td>
               <td>1</td>
               <td>1 2 3</td>
-              <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+              <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
               <td>Grnd: 3 <span class="enable_replicators">AR</span></td>
               <td class="enable_experience">S V E L</td>
             </tr>
