--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <style type="text/css">
     body {
+      -webkit-print-color-adjust: exact;
       font-family: sans-serif;
       font-size: 10pt;
       margin: 0.5em;
@@ -26,6 +27,15 @@
       margin: 0.5em 0 0 0;
       padding: 0;
       font-size: 110%;
+    }
+
+    a {
+      text-decoration: none;
+      color: blue;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
 
     li {
@@ -85,6 +95,12 @@
 
     #setup ul {
       padding-left: 1em;
+    }
+
+    #setup .aboutLink {
+      position: absolute;
+      right: 1em;
+      bottom: 1em;
     }
 
     table#productionSheet {
@@ -703,8 +719,8 @@
         <li><label><input type="checkbox" id="slowScientists">20. Slow Scientists</label></li>
         <li><label><input type="checkbox" id="smartScientists">20. Smart Scientists</label></li>
       </ul>
-    </div>
-    <div class="setupColumn">
+
+      <a class="aboutLink" href='https://github.com/rune-b/SE4X-Production-Sheet-Generator' target="__blank">About</a>
     </div>
   </div>
 
