--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       left: 5em;
       background-color: white;
       display: none;
+      z-index: 100;
 
       padding: 0.5em;
       border: solid 0.2em black;
@@ -238,6 +239,18 @@
     table.technologyProgression td:nth-of-type(2),
     table.technologySheet th {
       text-align: center;
+    }
+
+
+    .purchases {
+      position: relative;
+    }
+
+    .freeTroopsReminder {
+      font-size: 80%;
+      position: absolute;
+      right: 0.5em;
+      bottom: 0.1em;
     }
 
 
@@ -820,7 +833,9 @@
                 <td></td>
               </tr>
               <tr class="enable_researchCenters shipSpending">
-                <th>- Purchases</th>
+                <th class='purchases'>- Purchases
+                  <div class='freeTroopsReminder enable_groundCombat'>Don't forget to add free troops</div>
+                </th>
                 <td></td>
               </tr>
               <tr class="sum header">
