--- a/index.html
+++ b/index.html
@@ -636,25 +636,31 @@
       var table = shipTechSheet.getElementsByClassName("technologySheet")[0]; //TODO: multiple tables?
       var shipTypes = table.getElementsByTagName("tbody");
 
+      const nameTemplateRegex = /(.*#)(\d*)$/;
+      //const nameTemplateRegex = /(.*#)(\d*)\/(\d*)\/(\d*)$/;
+      const shipCountIndex = 2;
+
       for (var i = 0; i < shipTypes.length; i++) {
         var shipType = shipTypes[i];
         var rows = shipType.getElementsByTagName("tr");
 
         var template = Array.from(rows).find(row => {
           let shipName = row.getElementsByTagName("td")[0].innerHTML;
-          return shipName.match(/(.*#)(\d*)$/);
+          return shipName.match(nameTemplateRegex);
         })
 
         if (template) {
           var t = template.getElementsByTagName("td")[0].innerHTML;
-          var match = t.match(/(.*#)(\d*)$/);
+          var match = t.match(nameTemplateRegex);
 
           if (match)
-            for (var n = 1; n < match[2]; n++) {
+            for (var n = 1; n < match[shipCountIndex]; n++) {
               var newNode = template.cloneNode(true);
               newNode.getElementsByTagName("td")[0].innerHTML = match[1] + n;
               shipType.insertBefore(newNode, template);
             }
+
+
         }
       }
     }
@@ -728,6 +734,7 @@
         </li>
         <li><label><input type="checkbox" id="maintenanceChanges">Show rows for maintenance inrease/decrease</label></li>
         <li><label><input type="checkbox" id="growColoniesReminder">Show <i>Grow Colonies</i> reminder</label></li>
+        <li><label><input type="checkbox" id="showTech0">Show starting tech level on Ship Sheet</label></li>
       </ul>
 
       <h2>Base game</h2>
@@ -748,6 +755,7 @@
       <h2>Replicators</h2>
 
       <ul>
+        <!-- <li><label><input type="checkbox" id="replicatorsCounters">Extra ship group counters</label></li> -->
         <li><label><input type="checkbox" id="replicatorsTechCosts">2. Updated technology costs</label></li>
         <li><label><input type="checkbox" id="advancedConstruction">4. Advanced construction</label></li>
         <li><label><input type="checkbox" id="resourceCards">6. Resource Cards</label></li>
@@ -758,6 +766,7 @@
       <h2>Close Encounters</h2>
 
       <ul>
+        <!-- <li><label><input type="checkbox" id="CECounters">Extra ship group counters</label></li> -->
         <li><label><input type="checkbox" id="CETechCosts">2. Updated technology costs</label></li>
         <li><label><input type="checkbox" id="experience">3. Ship Experience and Military Academies</label></li>
         <li><label><input type="checkbox" id="boarding">4. Boarding and Capturing Ships</label></li>
@@ -1241,43 +1250,43 @@
         <tbody class="enable_flagships">
           <tr>
             <td>FLAG</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>2 3 <span class="disable_reactionMovement">4</span><span class="enable_reactionMovement">R</span> 5 6 <span class="enable_movement">7</span></td>
-            <td>Exp: 1 <span class="enable_reactionMovement">2</span> <span class="enable_fastBC">Fast: 1</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 <span class="disable_reactionMovement">4</span><span class="enable_reactionMovement">R</span> 5 6 <span class="enable_movement">7</span></td>
+            <td>Exp: <span class="enable_showTech0">0</span> 1 <span class="enable_reactionMovement">2</span> <span class="enable_fastBC">Fast: 1</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td>DD #6</td>
-            <td>1 <span class="enable_advancedConstruction">X:2</span></td>
-            <td>1 <span class="enable_advancedConstruction">X:2</span></td>
-            <td>1 2 3</td>
-            <td>2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
-            <td>Scan: 1 2 <span class="enable_advancedConstruction">Fast: 2</span></td>
+            <td>DD #4</td>
+            <td><span class="enable_showTech0">0</span> 1 <span class="enable_advancedConstruction">X:2</span></td>
+            <td><span class="enable_showTech0">0</span> 1 <span class="enable_advancedConstruction">X:2</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
+            <td>Scan: <span class="enable_showTech0">0</span> 1 2 <span class="enable_advancedConstruction">Fast: 2</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td>CA #6</td>
-            <td>1 2</td>
-            <td>1 2</td>
-            <td>1 2 3</td>
-            <td>2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
-            <td>Exp: 1 <span class="enable_reactionMovement">2</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2</td>
+            <td><span class="enable_showTech0">0</span> 1 2</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
+            <td>Exp: <span class="enable_showTech0">0</span> 1 <span class="enable_reactionMovement">2</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td>BC #6</td>
-            <td>1 2</td>
-            <td>1 2</td>
-            <td>1 2 3</td>
-            <td>2 3 <span class="disable_reactionMovement">4</span><span class="enable_reactionMovement">R</span> 5 6 <span class="enable_movement">7</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2</td>
+            <td><span class="enable_showTech0">0</span> 1 2</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 <span class="disable_reactionMovement">4</span><span class="enable_reactionMovement">R</span> 5 6 <span class="enable_movement">7</span></td>
             <td><span class="enable_fastBC">Fast: 1</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
@@ -1285,10 +1294,10 @@
         <tbody>
           <tr>
             <td>BB #6</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
             <td><span class="enable_advancedConstruction">TB: 1</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
@@ -1296,10 +1305,10 @@
         <tbody>
           <tr>
             <td>DN #5</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>2 3 4 5 <span class="disable_reactionMovement">6</span><span class="enable_reactionMovement">R</span> <span class="enable_movement">7</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 4 5 <span class="disable_reactionMovement">6</span><span class="enable_reactionMovement">R</span> <span class="enable_movement">7</span></td>
             <td><span class="enable_advancedConstruction">SP: 1</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
@@ -1307,10 +1316,10 @@
         <tbody class="enable_titans">
           <tr>
             <td>TN #5</td>
-            <td>1 2 3 <span class="enable_advancedConstruction">4</span></td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>2 3 4 5 6 <span class="enable_movement">7</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 3 <span class="enable_advancedConstruction">4</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 4 5 6 <span class="enable_movement">7</span></td>
             <td><span class="enable_carriers">FTR: 1-<span class="disable_advancedConstruction">3</span><span class="enable_advancedConstruction">4</span></span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
@@ -1321,10 +1330,10 @@
           </tr>
           <tr>
             <td>UN #6</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
             <td></td>
             <td class="enable_experience">S V E L</td>
           </tr>
@@ -1332,52 +1341,52 @@
         <tbody class="enable_cloaking">
           <tr>
             <td>R #6</td>
-            <td>1 2 <span class="enable_advancedConstruction">3</span></td>
-            <td>1 2 <span class="enable_advancedConstruction">3</span></td>
-            <td>1 2 3</td>
-            <td>2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
-            <td><span class="disable_advancedConstruction">Cloak: 2</span><span class="enable_advancedConstruction">C:2 F:2 G:3</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 <span class="enable_advancedConstruction">3</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 <span class="enable_advancedConstruction">3</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
+            <td><span class="disable_advancedConstruction">Cloak: <span class="enable_showTech0">1</span> 2</span><span class="enable_advancedConstruction">C:2 F:2 G:3</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td>SC #6</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1 2 3</td>
-            <td>2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
-            <td>PD: 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
+            <td>PD: <span class="enable_showTech0">0</span> 1 2 3</td>
             <td class="enable_experience">S V E L</td>
           </tr>
           <tr class="enable_advancedConstruction">
             <td>SC #7X</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1 2 3</td>
-            <td>2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
-            <td>PD: 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 <span class="disable_reactionMovement">3</span><span class="enable_reactionMovement">R</span> 4 5 6 <span class="enable_movement">7</span></td>
+            <td>PD: <span class="enable_showTech0">0</span> 1 2 3</td>
             <td class="enable_experience">S V E L</td>
           </tr>
         </tbody>
         <tbody class="enable_carriers">
           <tr>
             <td>F #10</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
             <td></td>
-            <td>FTR: 2 3 <span class="enable_advancedConstruction">4</span></td>
+            <td>FTR: <span class="enable_showTech0">1</span> 2 3 <span class="enable_advancedConstruction">4</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
         </tbody>
         <tbody class="enable_carriers">
           <tr>
             <td>CV #6</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1 2 3</td>
-            <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
             <td></td>
             <td class="enable_experience">S V E L</td>
           </tr>
@@ -1385,10 +1394,10 @@
         <tbody class="enable_advancedConstruction">
           <tr>
             <td>BV #6</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>1 2 3</td>
-            <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
             <td>Fast: 2</td>
             <td class="enable_experience">S V E L</td>
           </tr>
@@ -1396,11 +1405,11 @@
         <tbody class="enable_mines">
           <tr>
             <td>SW #6</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1 2 3</td>
-            <td>2 3 4 5 <span class="disable_reactionMovement">6</span><span class="enable_reactionMovement">R</span> <span class="enable_movement">7</span></td>
-            <td>SW: 2 <span class="enable_mineSweeper3">3</span></td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 4 5 <span class="disable_reactionMovement">6</span><span class="enable_reactionMovement">R</span> <span class="enable_movement">7</span></td>
+            <td>SW: <span class="enable_showTech0">1</span> 2 <span class="enable_mineSweeper3">3</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
         </tbody>
@@ -1408,20 +1417,20 @@
           <tr>
             <td>BD #6</td>
             <td></td>
-            <td>1 2</td>
-            <td>1 2 3</td>
-            <td>2 3 <span class="disable_reactionMovement">4</span><span class="enable_reactionMovement">R</span> 5 6 <span class="enable_movement">7</span></td>
-            <td>BD: 2</td>
+            <td><span class="enable_showTech0">0</span> 1 2</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 <span class="disable_reactionMovement">4</span><span class="enable_reactionMovement">R</span> 5 6 <span class="enable_movement">7</span></td>
+            <td>BD: <span class="enable_showTech0">1</span> 2</td>
             <td class="enable_experience">S V E L</td>
           </tr>
         </tbody>
         <tbody class="enable_groundCombat">
           <tr>
             <td>T #6</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1 2 3</td>
-            <td>2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1</td>
+            <td><span class="enable_showTech0">0</span> 1 2 3</td>
+            <td><span class="enable_showTech0">1</span> 2 3 4 <span class="disable_reactionMovement">5</span><span class="enable_reactionMovement">R</span> 6 <span class="enable_movement">7</span></td>
             <td>Grnd: 3 <span class="enable_replicators">AR</span></td>
             <td class="enable_experience">S V E L</td>
           </tr>
